# dnnOCV

./: CMakeLists.txt  opencv.txt
Source/: OrtNet.cpp  OrtNet.h  main.cpp
source/: CMakeLists.txt  OrtNet.cpp  OrtNet.h  object_detection.cpp  ortnet.h
